--- a/server.properties
+++ b/server.properties
@@ -6,7 +6,7 @@ allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
 bug-report-link=
-difficulty=easy
+difficulty=hard
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=false
@@ -32,7 +32,7 @@ max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=60000
 max-world-size=29999984
-motd=A Minecraft Server
+motd=Welcome to India Server
 network-compression-threshold=256
 online-mode=true
 op-permission-level=4
