난이도 설정
난이도

--- a/server.properties
+++ b/server.properties
@@ -6,7 +6,7 @@ allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
 bug-report-link=
-difficulty=hard
+difficulty=normal
 enable-command-block=true
 enable-jmx-monitoring=false
 enable-query=false
